--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test-response",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shokadinueu.github.io/login_system",
   "dependencies": {
     "@material-ui/core": "^4.7.0",
     "method-override": "^3.0.0",
@@ -14,7 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
