--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://shokadinueu.github.io/login_system",
   "dependencies": {
     "@material-ui/core": "^4.7.0",
+    "gh-pages": "^2.1.1",
     "method-override": "^3.0.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
