--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@material-ui/core": "^4.7.0",
     "gh-pages": "^2.1.1",
     "method-override": "^3.0.0",
-    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
@@ -33,5 +32,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0"
   }
 }
