--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.0",
+    "mongoose": "^5.7.13",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
